[tool.poetry]
name = "iss-pos"
version = "0.1.0"
description = ""
authors = ["JO <olesjakubb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
matplotlib = "^3.0"
numpy = "^1.15"
pyshp = "^2.0"
pyephem = "^3.7"
requests = "^2.21"
pillow = "^5.4"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.6"

[tool.poetry.scripts]
iss = 'iss_pos.__main__:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
